--- a/.github/workflows/sanity.yml
+++ b/.github/workflows/sanity.yml
@@ -2,14 +2,23 @@ name: Sanity Tests
 on: push
 
 jobs:
-  test_multiple_queries:
+
+  test_deploy:
     runs-on: ubuntu-latest
-    name: Test Function Multiple Queries
+    name: Test Action
     steps:
       # Run Queries
       - name: Checkout Repository
-        uses: actions/checkout@v2
-      - name: Run Queries
+        uses: actions/checkout@v3
+
+      - name: Create Qeury Files For Testing
+        run: |
+          echo "create temporary table test (id int, name string); insert into test values (5, 'hello world' ), (8, 'testing');" > query1.sql
+          echo "select * from test;" > query2.sql
+          cat query1.sql
+          cat query2.sql
+
+      - name: Deploy Queries
         uses: ./
         id: run_queries
         with:
@@ -17,38 +26,4 @@ jobs:
           snowflake_warehouse: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
           snowflake_username: ${{ secrets.SNOWFLAKE_USERNAME }}
           snowflake_password: ${{ secrets.SNOWFLAKE_PASSWORD }}
-          queries: 'call system$wait(1);
-                    select CURRENT_VERSION();
-                    select CURRENT_CLIENT()'
-      
-      # Validations
-      - name: Query Client validation
-        run: |
-          ${{contains(steps.run_queries.outputs.queries_results, 'PythonConnector')}}
-      - name: Waiting Query Validation
-        run: |
-          ${{contains(steps.run_queries.outputs.queries_results, 'waited 1 seconds')}}
-
-  test_matrix_query:
-    runs-on: ubuntu-latest
-    name: Test Matrix Multiple Queries
-    strategy:
-      matrix: 
-        sleep: [1, 2, 3]
-    steps:
-      # Run Queries
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-      - name: Run Queries
-        uses: ./
-        id: run_queries
-        with:
-          snowflake_account: ${{ secrets.SNOWFLAKE_ACCOUNT }}
-          snowflake_warehouse: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
-          snowflake_username: ${{ secrets.SNOWFLAKE_USERNAME }}
-          snowflake_password: ${{ secrets.SNOWFLAKE_PASSWORD }}
-          queries: 'call system$wait(${{matrix.sleep}})'
-
-      - name: Waiting Query Validation
-        run: |
-          ${{contains(steps.run_queries.outputs.queries_results, format('waited {0} seconds', matrix.sleep))}}
+          query_file: 'query1.sql,query2.sql'
