--- a/.github/workflows/sanity.yml
+++ b/.github/workflows/sanity.yml
@@ -26,4 +26,4 @@ jobs:
           snowflake_warehouse: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
           snowflake_username: ${{ secrets.SNOWFLAKE_USERNAME }}
           snowflake_password: ${{ secrets.SNOWFLAKE_PASSWORD }}
-          query_file: 'query1.sql,query2.sql'
+          query_files: 'query1.sql,query2.sql'
