--- a/.github/workflows/sanity.yml
+++ b/.github/workflows/sanity.yml
@@ -2,7 +2,6 @@ name: Sanity Tests
 on: push
 
 jobs:
-
   test_deploy:
     runs-on: ubuntu-latest
     name: Test Action
@@ -26,4 +25,6 @@ jobs:
           snowflake_warehouse: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
           snowflake_username: ${{ secrets.SNOWFLAKE_USERNAME }}
           snowflake_password: ${{ secrets.SNOWFLAKE_PASSWORD }}
-          query_files: 'query1.sql,query2.sql'
+          query_files: |-
+            query1.sql
+            query2.sql
